<resources>
    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh" translation="false">Refresh</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_location_label">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">60031</string>

    <string name="pref_unit_key" translatable="false">unit</string>
    <string name="pref_unit_label">Units</string>
    <string-array name="pref_unitType_entries"
                    translatable="false">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>
    <string-array name="pref_unitType_values">
        <item>metric</item>
        <item>imperial</item>
    </string-array>
    <string name="pref_unit_default" translatable="false">imperial</string>

    <string name="view_preferred_location">View Preferred Location On Map</string>

    <string name="action_share">Share</string>

    // THIS SECTION ADDED FOR COMPATIBILITY WITH UDACITY PROVIDED CODE IN
    // FetchWeatherTask.java, added in branch 4.07
    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_units_metric" translatable="false">metric</string>
    <string name="pref_units_imperial" translatable="false">imperial</string>
    // END COMPATIBILITY SECTION


</resources>
